// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadMarkerGenes action Doesnt dispatch MARKER_GENES_LOADED if theres a different ETag stored 1`] = `
[
  {
    "ETag": "new-etag",
  },
]
`;

exports[`loadMarkerGenes action dispatches appropriately on error 1`] = `
[
  {
    "ETag": "new-etag",
  },
  {
    "error": "We couldn't get the marker genes",
  },
]
`;

exports[`loadMarkerGenes action dispatches appropriately on success 1`] = `
[
  {
    "ETag": "new-etag",
  },
  {
    "ETag": "new-etag",
    "data": {
      "orderedGeneNames": [
        "geneA",
      ],
    },
    "plotUuid": "interactiveHeatmap",
  },
  {
    "configChanges": {
      "selectedGenes": [
        "geneA",
      ],
    },
    "plotUuid": "interactiveHeatmap",
  },
]
`;
